HyggeCode 唯一性检测不再默认检查 GlobalHyggeCodeEnum

--- a/hygge-web-toolkit/src/main/resources/META-INF/spring-configuration-metadata.json
+++ b/hygge-web-toolkit/src/main/resources/META-INF/spring-configuration-metadata.json
@@ -122,7 +122,7 @@
       "sourceType": "hygge.commons.spring.config.configuration.inner.HyggeCodeValidatorConfiguration",
       "name": "hygge.web-toolkit.validator.hyggeCode.uniqueEnable",
       "type": "java.lang.Boolean",
-      "defaultValue": false,
+      "defaultValue": true,
       "description": "HyggeCode 唯一性检测是否开启"
     }
   ]
