--- a/web-application-example/src/main/resources/application.properties
+++ b/web-application-example/src/main/resources/application.properties
@@ -11,7 +11,7 @@ hygge.web-toolkit.controller.log.aspectOrder=0
 # \u81EA\u5B9A\u4E49 HyggeCode \u6240\u5728\u5305\u8DEF\u5F84\uFF0C\u591A\u4E2A\u65F6\u7528 "," \u5206\u9694
 hygge.web-toolkit.validator.hyggeCode.basePackages=hygge.domain
 # HyggeCode \u662F\u5426\u5F00\u542F\u552F\u4E00\u6027\u68C0\u6D4B
-hygge.web-toolkit.validator.hyggeCode.uniqueEnable=false
+hygge.web-toolkit.validator.hyggeCode.uniqueEnable=true
 
 # httpHelper \u5DE5\u5177\u914D\u7F6E\u9879
 hygge.util.httpHelper.default.autoRegister=true
