--- a/hygge-web-toolkit/src/main/resources/META-INF/spring-configuration-metadata.json
+++ b/hygge-web-toolkit/src/main/resources/META-INF/spring-configuration-metadata.json
@@ -46,7 +46,7 @@
       ]
     },
     {
-      "name": "hygge.web-toolkit.controller.log.autoRegister",
+      "name": "hygge.webToolkit.controller.log.autoRegister",
       "values": [
         {
           "value": true
@@ -102,19 +102,19 @@
     },
     {
       "sourceType": "hygge.web.util.log.configuration.ControllerLogConfiguration",
-      "name": "hygge.web-toolkit.controller.log.autoRegister",
+      "name": "hygge.webToolkit.controller.log.autoRegister",
       "type": "java.lang.Boolean",
       "defaultValue": true
     },
     {
       "sourceType": "hygge.web.util.log.configuration.ControllerLogConfiguration",
-      "name": "hygge.web-toolkit.controller.log.aspectOrder",
+      "name": "hygge.webToolkit.controller.log.aspectOrder",
       "type": "java.lang.Integer",
       "defaultValue": 2147483645
     },
     {
       "sourceType": "hygge.commons.spring.config.configuration.inner.HyggeCodeValidatorConfiguration",
-      "name": "hygge.web-toolkit.validator.hyggeCode.basePackages",
+      "name": "hygge.webToolkit.validator.hyggeCode.basePackages",
       "type": "java.lang.String",
       "description": "自定义 HyggeCode 所在包路径，多个时用 \",\" 分隔"
     }
