--- a/web-application-example/src/main/resources/application.properties
+++ b/web-application-example/src/main/resources/application.properties
@@ -5,11 +5,11 @@ spring.jackson.default-property-inclusion=non_null
 management.endpoints.web.exposure.include=*
 
 # controller \u5C42\u65E5\u5FD7\u662F\u5426\u5F00\u542F
-hygge.web-toolkit.controller.log.autoRegister=true
+hygge.webToolkit.controller.log.autoRegister=true
 # controller \u5C42\u65E5\u5FD7\u5207\u9762\u4F18\u5148\u7EA7(\u9ED8\u8BA4\u503C\u4E3A Ordered.LOWEST_PRECEDENCE - 2)
-hygge.web-toolkit.controller.log.aspectOrder=0
+hygge.webToolkit.controller.log.aspectOrder=0
 # \u81EA\u5B9A\u4E49 HyggeCode \u6240\u5728\u5305\u8DEF\u5F84\uFF0C\u591A\u4E2A\u65F6\u7528 "," \u5206\u9694(\u5B58\u5728\u8BE5\u5C5E\u6027\u5219\u4F1A\u8FDB\u884C code \u552F\u4E00\u6027\u68C0\u67E5)
-hygge.web-toolkit.validator.hyggeCode.basePackages=hygge.domain
+hygge.webToolkit.validator.hyggeCode.basePackages=hygge.domain
 
 # httpHelper \u5DE5\u5177\u914D\u7F6E\u9879
 hygge.util.httpHelper.default.autoRegister=true
