--- a/web-application-example/src/main/resources/application.properties
+++ b/web-application-example/src/main/resources/application.properties
@@ -22,25 +22,25 @@ hygge.util.httpHelper.default.connection.maxPerRoute=200
 
 # hyggeLogging \u914D\u7F6E
 hygge.logging.enable=true
+hygge.logging.scope-paths.hygge.*=true
 # \u81EA\u5B9A\u4E49\u7684\u9879\u76EE\u7EC4\u540D
 hygge.logging.projectName=MyProject
-hygge.logging.scope.paths.hygge.*=true
-hygge.logging.pattern.jsonType.enable=false
-hygge.logging.rootOverride.enable=true
-hygge.logging.output.mode=CONSOLE
+hygge.logging.pattern.json-mode.enable=true
+hygge.logging.root-override.enable=true
+hygge.logging.output.mode=CONSOLE_AND_FILE
 hygge.logging.pattern.colorful.console.enable=true
 hygge.logging.pattern.colorful.file.enable=false
 hygge.logging.pattern.converter.mode=DEFAULT
 # hyggeLogging logback \u72EC\u5360(\u672A\u542F\u7528\u5BF9\u5E94\u65E5\u5FD7\u7EC4\u4EF6\u65F6\u914D\u7F6E\u9879\u65E0\u6548)
-hygge.logging.logback.pattern.file.maxHistory=0
-hygge.logging.logback.pattern.file.maxSize=2MB
+hygge.logging.logback.pattern.file-max-history=0
+hygge.logging.logback.pattern.file-max-size=2MB
 # \u63A8\u8350\u683C\u5F0F \u9879\u76EE\u7EC4\u540D_\u5E94\u7528\u540D_\u7C7B\u578B\u540D_\u65F6\u95F4
-hygge.logging.logback.pattern.fileNamePattern.hygge=D:\\var\\log\\test_web-application-example_hygge_%d{yyyy-MM-dd}.%i.log
-hygge.logging.logback.pattern.fileNamePattern.root=D:\\var\\log\\test_web-application-example_root_%d{yyyy-MM-dd}.%i.log
+hygge.logging.logback.pattern.hygge.file-name-pattern=D:\\var\\log\\test_web-application-example_hygge_%d{yyyy-MM-dd}.%i.log
+hygge.logging.logback.pattern.root.file-name-pattern=D:\\var\\log\\test_web-application-example_root_%d{yyyy-MM-dd}.%i.log
 # hyggeLogging log4j \u72EC\u5360(\u672A\u542F\u7528\u5BF9\u5E94\u65E5\u5FD7\u7EC4\u4EF6\u65F6\u914D\u7F6E\u9879\u65E0\u6548)
-hygge.logging.log4j.pattern.file.cron=0 0 0 * * ?
-hygge.logging.log4j.pattern.file.maxSize=2MB
-hygge.logging.log4j.pattern.file.path=D:\\var\\log\\
+hygge.logging.log4j.pattern.file-rollover-cron=0 0 0 * * ?
+hygge.logging.log4j.pattern.file-max-size=2MB
+hygge.logging.log4j.pattern.file-path=D:\\var\\log\\
 
 # \u9ED8\u8BA4\u5F00\u542F API \u6587\u6863
 springdoc.api-docs.enabled=true
