--- a/hygge-logging/hygge-logging-definition/pom.xml
+++ b/hygge-logging/hygge-logging-definition/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>spring-boot</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
