调整元数据提示信息

--- a/web-application-example/src/main/resources/application.properties
+++ b/web-application-example/src/main/resources/application.properties
@@ -5,20 +5,20 @@ spring.jackson.default-property-inclusion=non_null
 management.endpoints.web.exposure.include=*
 
 # controller \u5C42\u65E5\u5FD7\u662F\u5426\u5F00\u542F
-hygge.webToolkit.controller.log.autoRegister=true
+hygge.web-toolkit.controller.log.auto-register=true
 # controller \u5C42\u65E5\u5FD7\u5207\u9762\u4F18\u5148\u7EA7(\u9ED8\u8BA4\u503C\u4E3A Ordered.LOWEST_PRECEDENCE - 2)
-hygge.webToolkit.controller.log.aspectOrder=0
+hygge.web-toolkit.controller.log.aspect-order=0
 # \u81EA\u5B9A\u4E49 HyggeCode \u6240\u5728\u5305\u8DEF\u5F84\uFF0C\u591A\u4E2A\u65F6\u7528 "," \u5206\u9694(\u5B58\u5728\u8BE5\u5C5E\u6027\u5219\u4F1A\u8FDB\u884C code \u552F\u4E00\u6027\u68C0\u67E5)
-hygge.webToolkit.validator.hyggeCode.basePackages=hygge.domain
+hygge.web-toolkit.validator.hygge-code.base-packages=hygge.domain
 
 # httpHelper \u5DE5\u5177\u914D\u7F6E\u9879
-hygge.util.httpHelper.default.autoRegister=true
-hygge.util.httpHelper.default.ignoreSSL=false
-hygge.util.httpHelper.default.logType=NO_RESPONSE_HEADERS
-hygge.util.httpHelper.default.connection.connectTimeOut=10S
-hygge.util.httpHelper.default.connection.readTimeOut=60S
-hygge.util.httpHelper.default.connection.maxTotal=400
-hygge.util.httpHelper.default.connection.maxPerRoute=200
+hygge.util.http-helper.default.auto-register=true
+hygge.util.http-helper.default.ignore-s-s-l=false
+hygge.util.http-helper.default.log-type=NO_RESPONSE_HEADERS
+hygge.util.http-helper.default.connection.connect-time-out=10S
+hygge.util.http-helper.default.connection.read-time-out=60S
+hygge.util.http-helper.default.connection.max-total=400
+hygge.util.http-helper.default.connection.max-per-route=200
 
 # hyggeLogging \u914D\u7F6E
 hygge.logging.enable=true
