--- a/hygge-web-toolkit/pom.xml
+++ b/hygge-web-toolkit/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>hygge-util-json-jackson</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
 </project>
