升级 Spring Boot 版本到 2.7.12

--- a/web-application-example/src/main/resources/application.properties
+++ b/web-application-example/src/main/resources/application.properties
@@ -25,9 +25,9 @@ hygge.logging.enable=true
 hygge.logging.scope-paths.hygge.*=true
 # \u81EA\u5B9A\u4E49\u7684\u9879\u76EE\u7EC4\u540D
 hygge.logging.projectName=MyProject
-hygge.logging.pattern.json-mode.enable=true
+hygge.logging.pattern.json-mode.enable=false
 hygge.logging.root-override.enable=true
-hygge.logging.output.mode=CONSOLE_AND_FILE
+hygge.logging.output.mode=CONSOLE
 hygge.logging.pattern.colorful.console.enable=true
 hygge.logging.pattern.colorful.file.enable=false
 hygge.logging.pattern.converter.mode=DEFAULT
