hygge.logging.app-name 处理机制修正

--- a/web-application-example/src/main/resources/application.properties
+++ b/web-application-example/src/main/resources/application.properties
@@ -24,7 +24,9 @@ hygge.util.http-helper.default.connection.max-per-route=200
 hygge.logging.enable=true
 hygge.logging.scope-paths.hygge.*=true
 # \u81EA\u5B9A\u4E49\u7684\u9879\u76EE\u7EC4\u540D
-hygge.logging.projectName=MyProject
+hygge.logging.project-name=MyProject
+# \u8BE5\u53C2\u6570\u672A\u63D0\u4F9B\u65F6\u4F1A\u7528 spring.application.name \u8FDB\u884C\u66FF\u4EE3
+hygge.logging.app-name=web-application-example
 hygge.logging.pattern.json-mode.enable=false
 hygge.logging.root-override.enable=true
 hygge.logging.output.mode=CONSOLE
