调整示例项目包结构

--- a/web-application-example/src/main/resources/application.properties
+++ b/web-application-example/src/main/resources/application.properties
@@ -9,7 +9,7 @@ hygge.web-toolkit.controller.log.auto-register=true
 # controller \u5C42\u65E5\u5FD7\u5207\u9762\u4F18\u5148\u7EA7(\u9ED8\u8BA4\u503C\u4E3A Ordered.LOWEST_PRECEDENCE - 2)
 hygge.web-toolkit.controller.log.aspect-order=0
 # \u81EA\u5B9A\u4E49 HyggeCode \u6240\u5728\u5305\u8DEF\u5F84\uFF0C\u591A\u4E2A\u65F6\u7528 "," \u5206\u9694(\u5B58\u5728\u8BE5\u5C5E\u6027\u5219\u4F1A\u8FDB\u884C code \u552F\u4E00\u6027\u68C0\u67E5)
-hygge.web-toolkit.validator.hygge-code.base-packages=hygge.domain
+hygge.web-toolkit.validator.hygge-code.base-packages=example.hygge.domain
 
 # httpHelper \u5DE5\u5177\u914D\u7F6E\u9879
 hygge.util.http-helper.default.auto-register=true
@@ -23,6 +23,7 @@ hygge.util.http-helper.default.connection.max-per-route=200
 # hyggeLogging \u914D\u7F6E
 hygge.logging.enable=true
 hygge.logging.scope-paths.hygge.*=true
+hygge.logging.scope-paths.example.*=true
 # \u81EA\u5B9A\u4E49\u7684\u9879\u76EE\u7EC4\u540D
 hygge.logging.project-name=MyProject
 # \u8BE5\u53C2\u6570\u672A\u63D0\u4F9B\u65F6\u4F1A\u7528 spring.application.name \u8FDB\u884C\u66FF\u4EE3
@@ -50,7 +51,7 @@ springdoc.show-actuator=true
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
 # controller \u626B\u63CF\u8DEF\u5F84(\u591A\u4E2A\u7528 "," \u9694\u5F00)
-springdoc.packagesToScan=hygge.controller
+springdoc.packagesToScan=example.hygge.controller
 # \u53EA\u5339\u914D\u6EE1\u8DB3\u4E0B\u5217\u683C\u5F0F\u7684\u7AEF\u70B9(\u591A\u4E2A\u7528 "," \u9694\u5F00)
 springdoc.pathsToMatch=/**
 # Tag \u9ED8\u8BA4\u5C55\u793A\u6A21\u5F0F(none \u4EE3\u8868\u6536\u8D77)
