示例项目启动参数调整

--- a/web-application-example/src/main/resources/application.properties
+++ b/web-application-example/src/main/resources/application.properties
@@ -47,7 +47,7 @@ hygge.logging.log4j.pattern.file-path=D:\\var\\log\\
 
 # \u9ED8\u8BA4\u5F00\u542F API \u6587\u6863
 springdoc.api-docs.enabled=true
-springdoc.show-actuator=true
+springdoc.show-actuator=false
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
 # controller \u626B\u63CF\u8DEF\u5F84(\u591A\u4E2A\u7528 "," \u9694\u5F00)
