--- a/pom.xml
+++ b/pom.xml
@@ -77,45 +77,50 @@
         </snapshotRepository>
     </distributionManagement>
 
+    <build>
+        <plugins>
+            <!--全局统一管理模块版本号插件-->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.10.0</version>
+            </plugin>
+            <plugin>
+                <!-- compiler 配置插件-->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                    <encoding>UTF-8</encoding>
+                    <fork>true</fork>
+                </configuration>
+            </plugin>
+            <!--打包出 source 的插件 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.2.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
     <profiles>
         <profile>
             <id>release</id>
-            <!--插件-->
+            <!--下面的插件仅在发布 release 时有用-->
             <build>
                 <plugins>
-                    <!--全局统一管理模块版本号插件-->
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>versions-maven-plugin</artifactId>
-                        <version>2.10.0</version>
-                    </plugin>
-                    <plugin>
-                        <!--这个插件会影响 IDEA 识别项目 compiler 的设置-->
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <version>3.10.1</version>
-                        <configuration>
-                            <source>8</source>
-                            <target>8</target>
-                            <encoding>UTF-8</encoding>
-                            <fork>true</fork>
-                        </configuration>
-                    </plugin>
-                    <!--打包出 source 的插件 -->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-source-plugin</artifactId>
-                        <version>3.2.1</version>
-                        <executions>
-                            <execution>
-                                <id>attach-sources</id>
-                                <goals>
-                                    <goal>jar-no-fork</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <!--生成 javadoc -->
+                    <!--生成 javadoc 的插件-->
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
@@ -140,7 +145,7 @@
                             </execution>
                         </executions>
                     </plugin>
-                    <!--gpg 签名-->
+                    <!--gpg 签名插件-->
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
