--- a/hygge-logging/hygge-logging-definition/pom.xml
+++ b/hygge-logging/hygge-logging-definition/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>hygge-logging</artifactId>
+        <artifactId>hygge-project</artifactId>
         <groupId>io.github.soupedog</groupId>
         <version>0.0.13</version>
     </parent>
