--- a/hygge-util/hygge-util-java-generator/pom.xml
+++ b/hygge-util/hygge-util-java-generator/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>io.github.soupedog</groupId>
         <artifactId>hygge-project</artifactId>
-        <version>0.0.14.1-SNAPSHOT</version>
+        <version>0.0.14</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
