--- a/hygge-commons/pom.xml
+++ b/hygge-commons/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.github.soupedog</groupId>
         <artifactId>hygge-project</artifactId>
-        <version>0.0.14</version>
+        <version>0.0.15-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
