--- a/web-application-example/pom.xml
+++ b/web-application-example/pom.xml
@@ -19,7 +19,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-        <hygge.version>0.0.14</hygge.version>
+        <hygge.version>0.0.15-SNAPSHOT</hygge.version>
         <spring.boot.version>2.7.18</spring.boot.version>
         <lombok.version>1.18.30</lombok.version>
         <maven.deploy.skip>true</maven.deploy.skip>
