--- a/hygge-logging/hygge-logging-logback/pom.xml
+++ b/hygge-logging/hygge-logging-logback/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>hygge-project</artifactId>
         <groupId>io.github.soupedog</groupId>
-        <version>0.0.15-SNAPSHOT</version>
+        <version>0.0.15</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
