--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         automatic logging tools, network request tools ...
     </description>
     <url>https://github.com/soupedog/hygge-project</url>
-    <version>0.0.15-SNAPSHOT</version>
+    <version>0.0.15</version>
 
     <licenses>
         <license>
